--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -36,7 +36,7 @@ signs:
       - b-build
     args:
       - --batch
-      - --local-user=github-bot@buyo.io
+      - --local-user=ops@buyo.io
       - --pinentry-mode=loopback
       - --output=${signature}
       - --detach-sign
