--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   release-please:
     # Do not run on forks.
-    if: github.repository == 'hetznercloud/cli'
+    if: github.repository == 'buyoio/b'
 
     runs-on: ubuntu-latest
     steps:
