feat: fix release-please version management for 1.1.2

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -7,7 +7,7 @@
     ".": {
       "release-type": "go",
       "package-name": "b-cli",
-      "extra-files": ["cmd/b/main.go"]
+      "extra-files": ["cmd/b/main.go", "VERSION"]
     }
   }
 }
