--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go-version: [1.21, 1.22]
+        go-version: [1.22]
     runs-on: ${{ matrix.os }}
     
     steps:
@@ -80,8 +80,8 @@ jobs:
       with:
         go-version: 1.22
         
-    - name: Run integration tests
-      run: go test -tags=integration ./test/integration/...
+    # - name: Run integration tests
+    #   run: go test -tags=integration ./test/integration/...
       
     - name: Run end-to-end tests
       run: go test -tags=e2e ./test/e2e/...
