--- a/.github/ISSUE_TEMPLATE/binary-request.yml
+++ b/.github/ISSUE_TEMPLATE/binary-request.yml
@@ -1,7 +1,7 @@
 name: Binary Request
 description: Request a new binary to be added to the b CLI tool
 title: "Binary Request: "
-labels: ["request"]
+labels: ["request", "good first issue"]
 body:
   - type: input
     id: binary-name
