feat: add argocd binary support and fix packer environment setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "mode": "debug",
       "program": "${workspaceRoot}/cmd/b/main.go",
-      "args": ["v", "envsubst"]
+      "args": ["v", "argocd"]
     } 
   ]
 }
